JEDIT 4.2 VERSION HISTORY

{{{ Version 4.2pre7

Thanks to Ollie Rutherfurd, Randy Hudson, Chris Petersen, Randolf Mock,
Alessandro Falappa and Ben Williams for contributing to this release.

{{{ Miscellaneous

- The list of modes in various dialog boxes is now sorted (this does not
  affect the order that buffer names are matched against modes).

- Bundled some macros from various sources (Ollie Rutherfurd).

- The plugin manager no longer lists the JDK's "tools.jar" if it is
  loaded.

- The "Search in Directory" command now always selects the most recently
  searched in directory. To search in the current directory with the
  filter based on the current buffer's file name, click the
  "Synchronize" button.

- Updated "Preview Javadoc of Current Buffer" macro (Tom Gutwin).

- Added option to file system browser's Commands->Encoding menu to
  disable encoding auto-detection.

- Added support for UTF-8Y encoding, which is like UTF-8 except there
  is a three-byte signature (0xEFBBBF) at the beginning of the file.
  See http://oss.software.ibm.com/icu/docs/papers/forms_of_unicode/#t2.
  UTF-8Y files are automatically detected, just like UTF-16.

- Removed File->Insert File command. As before, you can still invoke
  File->Open and select "Insert" from a file's right-click menu in the
  file system browser.

}}}
{{{ Syntax Highlighting

- Added MoinMoin syntax highlighting (Ollie Rutherfurd).

- Added Relax NG compact syntax highlighting (Randy Hudson).

- Minor fix to Perl heredoc syntax highlighting (Chris Petersen).

- Updated ADPL syntax highlighting (Randolf Mock)

- Added Renderman-RIB syntax highlighting (Alessandro Falappa).

- Added PowerDynamo syntax highlighting (Ben Williams).

}}}
{{{ Bug Fixes

- Fixed NullPointerException on startup which prevented jEdit from
  loading if a corrupted JAR file was present in one of the jars
  directories.

- Dropping a file onto the text area did not work if the text area was
  read-only.
